changes for 10.1 apmdb